--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <span>abhimbit76@gmail.com</span>
                     </div>
                 </div>
-                <a href="#" class="btn">Download Cv</a>
+                <a href="Abhishek Kumar Yadav update.pdf" class="btn" target="_blank>Download Cv</a>
             </div>
         </div>
     </section>
